<resources>
    <string name="app_name">Veggies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_add_address_map">Map</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="in_stock">In stock</string>
    <string name="our_price">our price</string>
    <string name="availability">availability</string>
    <string name="mrp">mrp</string>
    <string name="off">off</string>

    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="imageview">ImageView</string>
    <string name="delete_image">Delete ImageView</string>

    <!-- Title string array -->
    <string-array name="title">
        <item>Taj Mahal</item>
        <item>Hawa Mahal</item>
        <item>Golden Temple</item>
        <item>Shore Temple</item>
        <item>Chhatrapati Shivaji Terminus</item>
        <item>Lotus Temple</item>
        <item>Victoria Memorial Hall</item>
        <item>Brihadeeswarar Temple</item>
        <item>Mahabodhi Temple</item>
    </string-array>

    <!-- Location string array -->
    <string-array name="location">
        <item>Agra</item>
        <item>Jaipur</item>
        <item>Amritsar</item>
        <item>Bay of Bengal</item>
        <item>Mumbai</item>
        <item>New Delhi</item>
        <item>Kolkata</item>
        <item>Tamil Nadu</item>
        <item>Patna</item>
    </string-array>

    <!-- Year string array -->
    <string-array name="constructed_year">
        <item>1632</item>
        <item>1799 AD</item>
        <item>1577</item>
        <item>700–728 AD</item>
        <item>May 1888</item>
        <item>1987</item>
        <item>1906</item>
        <item>1010 CE</item>
        <item>250 BCE</item>
    </string-array>
</resources>
