<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@+id/rl_root" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5.0dip"
        android:layout_marginTop="8.0dip"
        android:layout_marginRight="5.0dip"
        app:cardElevation="0.5dip"
        app:cardUseCompatPadding="true">
        <RelativeLayout android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:src="@drawable/orange" android:id="@+id/img_product" android:layout_width="90.0dip" android:layout_height="90.0dip" android:adjustViewBounds="true" android:layout_centerVertical="true" android:layout_marginEnd="8.0dip" android:layout_marginRight="8.0dip" android:transitionName="simple_activity_transition" />
            <LinearLayout android:orientation="vertical" android:id="@+id/ll_" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toStartOf="@+id/layout_controls" android:layout_toLeftOf="@+id/layout_controls" android:layout_toEndOf="@+id/img_product" android:layout_toRightOf="@+id/img_product">
                <TextView android:text="orange" android:textSize="14.0sp" android:textStyle="bold" android:ellipsize="end" android:id="@+id/tv_product_name" android:layout_width="wrap_content" android:layout_height="wrap_content"  />
                <LinearLayout android:orientation="horizontal" android:id="@+id/layout_price" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="11.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/availability" android:layout_centerVertical="true" />
                    <TextView android:textSize="12.0sp" android:textColor="@color/colorAccent" android:id="@+id/txt_out_stock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_stock" android:layout_centerVertical="true" android:layout_marginStart="5.0dip" android:layout_marginLeft="5.0dip" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/our_price" android:layout_centerVertical="true" />
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12.0sp" android:textColor="@color/colorAccent" android:id="@+id/tv_product_price" android:layout_marginStart="5.0dip" android:layout_marginLeft="5.0dip"  />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="12.0sp" android:id="@+id/txt_mrp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mrp" android:layout_centerVertical="true" />
                    <TextView android:layout_height="wrap_content" android:textSize="12.0sp" android:id="@+id/tv_original_price" android:layout_width="fill_parent" android:layout_marginStart="5.0dip" android:layout_marginLeft="5.0dip"  />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout android:gravity="center" android:id="@+id/layout_controls" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" android:layout_alignParentRight="true">
                <LinearLayout android:gravity="center" android:id="@+id/plusMinusLayout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true">
                    <ImageView android:layout_gravity="center_vertical" android:id="@+id/img_remove" android:background="?selectableItemBackgroundBorderless" android:padding="4.0dip" android:clickable="true" android:layout_width="22.0dip" android:layout_height="23.0dip" android:src="@drawable/minus" android:tint="@color/colorAccent" />
                    <TextView android:enabled="false" android:textSize="12.0sp" android:textColor="@color/colorPrimary" android:gravity="center" android:layout_gravity="center_vertical" android:id="@+id/item_count" android:background="@null" android:focusable="false" android:layout_width="35.0dip" android:layout_height="23.0dip" android:maxLength="3" android:inputType="number" />
                    <ImageView android:layout_gravity="center_vertical" android:id="@+id/img_add" android:background="?selectableItemBackgroundBorderless" android:padding="4.0dip" android:clickable="true" android:layout_width="20.0dip" android:layout_height="18.0dip" android:src="@drawable/plus" android:tint="@color/colorAccent" />
                </LinearLayout>
                <Button android:textSize="10.0sp" android:id="@+id/btn_add" android:visibility="visible" android:layout_width="77.0dip" android:layout_height="35.0dip" android:text="@string/add" android:layout_marginStart="5.0dip" android:layout_marginLeft="5.0dip" style="@style/Widget.AppCompat.Button.Colored" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>